# gambos-sw

./: .clang-format  .clangd  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  setup.sh
hardware/: .gitkeep  MCU.kicad_sch  fp-lib-table  gambos-pcb.kicad_pcb  gambos-pcb.kicad_prl  gambos-pcb.kicad_pro  gambos-pcb.kicad_sch  microcontroller.kicad_sch  power_and_esc.kicad_sch  sensors_and_flash.kicad_sch  servo_connectors.kicad_sch  sym-lib-table
hardware/gerbers/: gambos-pcb-B_Cu.gbl  gambos-pcb-B_Gnd.g2  gambos-pcb-B_Mask.gbs  gambos-pcb-B_Paste.gbp  gambos-pcb-B_Silkscreen.gbo  gambos-pcb-Edge_Cuts.gm1  gambos-pcb-F_Cu.gtl  gambos-pcb-F_Mask.gts  gambos-pcb-F_Paste.gtp  gambos-pcb-F_Silkscreen.gto  gambos-pcb-NPTH.drl  gambos-pcb-PTH.drl  gambos-pcb-T_Gnd.g1
hardware/libs/: gambos-symbols.kicad_sym
project/: .mxproject  CMakeLists.txt  CMakePresets.json
project/app/: README.md  app.c  app.h
project/app/devkit/: CMakeLists.txt  app.c  app.h  log.c  log.h  retarget_print.c
project/app/devkit/app/: app.cpp  app.hpp
project/app/devkit/button_handler/: button_handler.cpp  button_handler.hpp  common.hpp
project/app/devkit/messaging/: messaging.hpp
project/app/devkit/tx_handler/: tx_handler.c  tx_handler.cpp  tx_handler.h  tx_handler.hpp
project/board/: README.md
project/build-devkit/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
project/cmake/: gcc-arm-none-eabi.cmake
project/custom_drivers/: CMakeLists.txt
project/scripts/: build.sh  (+7 more)
software/: .clangd  README.md
(+263 files in other folders)
